--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </div>
 <div class="contact">
-    <img src="/images/avatar.jpg" alt="pfp-404">
+    <img src="./images/avatar.jpg" alt="pfp-404">
     <div>
     <h3>Samuel Green</h3>
     <p>Available to Walk</p>
